Bug 1656505 [Linux] Use correct RGB/RGBA formats with dmabuf, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D88381